--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "drupal/viewsreference": "^1.0@alpha",
         "drupal/mailchimp": "^1.3",
         "drupal/search_api": "^1.3",
-        "lsolesen/edbbrugs-php-sdk": "^0.2.0"
+        "lsolesen/edbbrugs-php-sdk": "^0.2.0",
+        "quickpay/quickpay-php-client": "^1.0"
     },
     "repositories": {
         "packages.drupal.org": {
