--- a/config/sync/core.entity_view_display.node.vih_event_order.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_event_order.default.yml
@@ -5,15 +5,25 @@ dependencies:
   config:
     - field.field.node.vih_event_order.field_vih_eo_event
     - field.field.node.vih_event_order.field_vih_eo_persons
+    - field.field.node.vih_event_order.field_vih_eo_price
+    - field.field.node.vih_event_order.field_vih_eo_status
     - node.type.vih_event_order
   module:
     - entity_reference_revisions
+    - options
     - user
 id: node.vih_event_order.default
 targetEntityType: node
 bundle: vih_event_order
 mode: default
 content:
+  field_payment_status:
+    weight: 103
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: plugin_label
+    region: content
   field_vih_eo_event:
     weight: 101
     label: above
@@ -31,8 +41,27 @@ content:
       link: ''
     third_party_settings: {  }
     region: content
+  field_vih_eo_price:
+    weight: 104
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
+    region: content
+  field_vih_eo_status:
+    weight: 105
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   links:
     weight: 100
     region: content
 hidden:
+  field_payment_line_item: true
   langcode: true
