--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,6 +1,7 @@
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  bellcom_quickpay_integration: 0
   block: 0
   block_content: 0
   breakpoint: 0
