--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -29,12 +29,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   field_image:
-    weight: 102
+    weight: 2
     label: above
     settings:
       image_style: ''
@@ -44,7 +44,7 @@ content:
     region: content
   field_news_paragraph:
     type: entity_reference_revisions_entity_view
-    weight: 105
+    weight: 4
     label: hidden
     settings:
       view_mode: default
@@ -52,26 +52,18 @@ content:
     third_party_settings: {  }
     region: content
   field_news_tags:
-    weight: 103
+    weight: 3
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_page_main_image:
-    weight: 104
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_page_main_image: true
   langcode: true
