--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.user_quote.field_background_color
+    - field.field.paragraph.user_quote.field_background_image
     - field.field.paragraph.user_quote.field_heading
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
@@ -16,6 +18,15 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
+  field_background_image:
+    weight: 3
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_heading:
     weight: 0
     label: hidden
@@ -40,4 +51,5 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-hidden: {  }
+hidden:
+  field_background_color: true
