--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "drupal/mailchimp": "^1.3",
         "drupal/search_api": "^1.3",
         "lsolesen/edbbrugs-php-sdk": "^0.2.0",
-        "quickpay/quickpay-php-client": "^1.0"
+        "quickpay/quickpay-php-client": "^1.0",
+        "drupal/webform": "^5.0@beta"
     },
     "repositories": {
         "packages.drupal.org": {
