--- a/config/sync/field.field.node.vih_short_course.field_paragraphs.yml
+++ b/config/sync/field.field.node.vih_short_course.field_paragraphs.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_paragraphs
     - node.type.vih_short_course
+    - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
 id: node.vih_short_course.field_paragraphs
@@ -20,7 +21,9 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    target_bundles: null
+    negate: 0
+    target_bundles:
+      vih_webform: vih_webform
     target_bundles_drag_drop:
       1_column_action_centered:
         weight: 13
@@ -58,4 +61,37 @@ settings:
       vih_teacher_class_description:
         weight: 24
         enabled: false
+      event_list:
+        weight: 26
+        enabled: false
+      file:
+        weight: 27
+        enabled: false
+      long_course_list_:
+        weight: 29
+        enabled: false
+      news_list:
+        weight: 30
+        enabled: false
+      short_course_list_:
+        weight: 32
+        enabled: false
+      user_quote:
+        weight: 33
+        enabled: false
+      vih_class_groups_accordion:
+        weight: 35
+        enabled: false
+      vih_ordered_course_person:
+        weight: 40
+        enabled: false
+      vih_ordered_event_person:
+        weight: 42
+        enabled: false
+      vih_single_class_group:
+        weight: 44
+        enabled: false
+      vih_webform:
+        enabled: true
+        weight: 46
 field_type: entity_reference_revisions
