--- a/config/sync/mailchimp.settings.yml
+++ b/config/sync/mailchimp.settings.yml
@@ -5,3 +5,4 @@ api_classname: Mailchimp\Mailchimp
 test_mode: false
 _core:
   default_config_hash: x8k6uOqmSHPqpp71jYGxHF3_SAs3U-Pha3YCntQIhPU
+langcode: da
