--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -35,7 +35,15 @@ vih_subscription.event_order_create:
     _permission: 'access content'
     event: \d+
 vih_subscription.subscription_successful_redirect:
-  path: '/tilmelding/tak'
+  path: '/tilmelding/{subject}/{order}/tak/{checksum}'
+  options:
+      parameters:
+        subject:
+          type: entity:node
+        order:
+          type: entity:node
+        checksum:
+          type: string
   defaults:
       _controller: '\Drupal\vih_subscription\Controller\SubscriptionSuccessfulController::content'
       _title_callback: '\Drupal\vih_subscription\Controller\SubscriptionSuccessfulController::getTitle'
@@ -55,8 +63,17 @@ vih_subscription.subscription_error_redirect:
       _title_callback: '\Drupal\vih_subscription\Controller\SubscriptionErrorController::getTitle'
   requirements:
     _permission: 'access content'
-vih_subscription.admin.settings_form:
-  path: '/admin/config/vih_subscription_edbbrugsen/settings'
+vih_subscription.admin.notifications.settings_form:
+  path: '/admin/config/vih_subscription/notifications/settings'
+  defaults:
+    _form: '\Drupal\vih_subscription\Form\NotificationsSettingsForm'
+    _title: 'VIH Subscriptions notifications settings'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
+vih_subscription.admin.edbbrugsen.settings_form:
+  path: '/admin/config/vih_subscription/edbbrugsen/settings'
   defaults:
     _form: '\Drupal\vih_subscription\Form\EdbbrugsenSettingsForm'
     _title: 'EDBBrugsen integration settings'
