--- a/config/sync/field.field.node.vih_long_cource.field_vih_course_week_price.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_course_week_price.yml
@@ -9,7 +9,7 @@ id: node.vih_long_cource.field_vih_course_week_price
 field_name: field_vih_course_week_price
 entity_type: node
 bundle: vih_long_cource
-label: 'Week price'
+label: Ugebetaling
 description: ''
 required: false
 translatable: false
