--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -5,11 +5,11 @@ dependencies:
   config:
     - field.field.node.event.body
     - field.field.node.event.field_event_end_date
-    - field.field.node.event.field_event_paragraph
     - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_page_main_image
+    - field.field.node.event.field_paragraphs
     - field.field.node.event.field_vih_event_persons_limit
     - node.type.event
   module:
@@ -46,15 +46,6 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_event_paragraph:
-    type: entity_reference_revisions_entity_view
-    weight: 6
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_event_price:
     weight: 9
     label: hidden
@@ -83,6 +74,15 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_paragraphs:
+    weight: 10
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
     region: content
   field_vih_event_persons_limit:
     weight: 6
