--- a/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
+++ b/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
@@ -6,10 +6,11 @@ dependencies:
     - core.entity_view_mode.node.embedded_teaser_list
     - field.field.node.event.body
     - field.field.node.event.field_event_end_date
-    - field.field.node.event.field_event_paragraph
+    - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_page_main_image
+    - field.field.node.event.field_paragraphs
     - field.field.node.event.field_vih_event_persons_limit
     - image.style.vih_event_teaser
     - node.type.event
@@ -65,8 +66,9 @@ content:
     type: image
     region: content
 hidden:
-  field_event_paragraph: true
+  field_event_price: true
   field_page_main_image: true
+  field_paragraphs: true
   field_vih_event_persons_limit: true
   langcode: true
   links: true
