--- a/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_short_course:
     weight: 0
-    label: above
+    label: hidden
     settings:
       plugin_types:
         - block
