--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,22 @@
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsStream": "~1.2",
         "phpunit/phpunit": "~4.8",
-        "symfony/css-selector": "2.7.*"
+        "symfony/css-selector": "2.7.*",
+        "composer/composer": "^1.3",
+        "drush/drush": "^8.1.15",
+        "drupal/console": "1.0.1",
+        "drupal/twig_xdebug": "^1.0"
     },
     "require": {
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
-        "cweagans/composer-patches": "1.5.0",
-        "drupal/bootstrap": "3.1",
-        "drupal/devel": "^1.0@beta",
+        "cweagans/composer-patches": "^1.6",
+        "drupal/bootstrap": "^3.6",
+        "drupal/devel": "^1.2",
         "drupal/paragraphs": "1.x-dev",
         "drupal/linkit": "^4.0",
         "acquia/lightning": "^2.0.0",
-        "drupal/admin_toolbar": "^1.18",
+        "drupal/admin_toolbar": "^1.20",
         "drupal/twig_tweak": "^1.4",
         "drupal/eva": "^1.0@RC",
         "drupal/stage_file_proxy": "^1.0@alpha",
@@ -34,36 +38,43 @@
         "drupal/search_api": "^1.3",
         "lsolesen/edbbrugs-php-sdk": "^0.2.0",
         "quickpay/quickpay-php-client": "^1.0",
-        "drupal/webform": "^5.0@beta"
+        "drupal/webform": "^5.0@beta",
+        "drupal/examples": "1.x-dev"
     },
-    "repositories": {
-        "packages.drupal.org": {
+    "repositories": [
+        {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         }
-    },
+    ],
     "scripts": {
         "post-install-cmd": [
-            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-            "Acquia\\Lightning\\ScriptHandler::deployLibraries"
+            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
         ],
         "post-update-cmd": [
-            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-            "Acquia\\Lightning\\ScriptHandler::deployLibraries"
+            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold"
         ]
     },
     "config": {
         "bin-dir": "bin/"
     },
-    "autoload": {
-        "classmap": [
-            "scripts/ScriptHandler.php"
-        ]
-    },
     "extra": {
+        "installer-types": [
+            "bower-asset",
+            "npm-asset"
+        ],
         "installer-paths": {
             "docroot/core": [
-                "drupal/core"
+                "type:drupal-core"
+            ],
+            "docroot/libraries/{$name}": [
+                "type:drupal-library",
+                "type:bower-asset",
+                "type:npm-asset"
             ],
             "docroot/modules/contrib/{$name}": [
                 "type:drupal-module"
