--- a/config/sync/core.entity_form_display.media.document.media_browser.yml
+++ b/config/sync/core.entity_form_display.media.document.media_browser.yml
@@ -24,11 +24,13 @@ content:
       display_label: true
     weight: 1
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: 0
@@ -36,6 +38,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden:
   created: true
   field_document: true
