--- a/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
@@ -21,6 +21,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
   field_background_image:
     weight: 6
     settings:
@@ -28,6 +29,7 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+    region: content
   field_heading:
     weight: 8
     settings:
@@ -35,6 +37,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
 hidden:
   created: true
   status: true
