--- a/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
@@ -25,6 +25,7 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+    region: content
   field_vih_og_title:
     weight: 6
     settings:
@@ -32,6 +33,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
 hidden:
   created: true
   status: true
