--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -113,4 +113,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  translation:
+    weight: 10
+    region: content
 hidden: {  }
