--- a/config/sync/core.entity_view_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_view_display.block_content.banner.default.yml
@@ -22,6 +22,7 @@ content:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
+    region: content
   field_link:
     weight: 1
     label: hidden
@@ -33,5 +34,6 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
+    region: content
 hidden:
   langcode: true
