--- a/config/sync/core.entity_view_display.contact_message.kontakt_os.default.yml
+++ b/config/sync/core.entity_view_display.contact_message.kontakt_os.default.yml
@@ -15,12 +15,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: basic_string
+    region: content
   message:
     type: basic_string
     weight: 0
     label: above
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     weight: -3
     label: above
@@ -28,6 +30,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   subject:
     weight: -1
     label: above
@@ -35,5 +38,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
 hidden:
   langcode: true
