--- a/config/sync/core.entity_view_display.paragraph.vih_course_slot.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_course_slot.default.yml
@@ -20,6 +20,7 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
   field_vih_cs_mandatory:
     weight: 1
     label: above
@@ -29,6 +30,7 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
   field_vih_cs_title:
     weight: 0
     label: above
@@ -36,6 +38,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_vih_cs_travel:
     weight: 3
     label: above
@@ -45,4 +48,5 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
 hidden: {  }
