--- a/config/sync/core.entity_view_display.paragraph.vih_option_group.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_option_group.default.yml
@@ -21,6 +21,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
   field_vih_og_title:
     weight: 0
     label: above
@@ -28,4 +29,5 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
 hidden: {  }
