--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_course_period.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_course_period.default.yml
@@ -20,6 +20,7 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
   field_vih_ocp_order_course_slots:
     type: entity_reference_revisions_entity_view
     weight: 1
@@ -28,4 +29,5 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
