--- a/config/sync/core.entity_form_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_form_display.block_content.banner.default.yml
@@ -28,6 +28,7 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+    region: content
   field_link:
     weight: 8
     settings:
@@ -38,6 +39,7 @@ content:
       link_class_select: ''
     third_party_settings: {  }
     type: link_class_field_widget
+    region: content
   info:
     type: string_textfield
     weight: -5
@@ -45,9 +47,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden: {  }
