--- a/config/sync/core.entity_form_display.media.instagram.default.yml
+++ b/config/sync/core.entity_form_display.media.instagram.default.yml
@@ -22,17 +22,20 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+    region: content
   field_media_in_library:
     type: boolean_checkbox
     weight: 1
     settings:
       display_label: true
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: 0
@@ -40,8 +43,10 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   preview:
     weight: 0
+    region: content
 hidden:
   created: true
   uid: true
