--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -22,16 +22,19 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+    region: content
   field_media_video_embed_field:
     type: video_embed_field_textfield
     weight: 1
     settings: {  }
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: 0
@@ -39,8 +42,10 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   preview:
     weight: 0
+    region: content
 hidden:
   created: true
   uid: true
