--- a/config/sync/core.entity_form_display.media.video.media_browser.yml
+++ b/config/sync/core.entity_form_display.media.video.media_browser.yml
@@ -22,11 +22,13 @@ content:
     settings:
       display_label: true
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: 0
@@ -34,10 +36,12 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   preview:
     weight: null
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden:
   created: true
   field_media_video_embed_field: true
