--- a/config/sync/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_form_display.node.landing_page.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - metatag
     - panelizer
     - path
+    - workbench_moderation
 _core:
   default_config_hash: VmtwZehGc73SkubyCyaa-lTzILFmC4aCGaG2LtGXCqE
 id: node.landing_page.default
@@ -22,26 +23,31 @@ content:
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_meta_tags:
     weight: 26
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   panelizer:
     type: panelizer
     weight: 5
     settings: {  }
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 3
     settings: {  }
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: 0
@@ -49,6 +55,10 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
+  translation:
+    weight: 10
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 1
@@ -57,6 +67,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden:
   promote: true
   sticky: true
