--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -3,16 +3,16 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.node.page.body
     - field.field.node.page.field_meta_tags
     - field.field.node.page.field_page_main_image
     - field.field.node.page.field_paragraphs
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
-    - image.style.thumbnail
     - node.type.page
   module:
-    - image
+    - entity_browser
     - inline_entity_form
     - metatag
     - paragraphs
@@ -34,16 +34,19 @@ content:
       summary_rows: 3
       placeholder: ''
     third_party_settings: {  }
+    region: content
   created:
     type: datetime_timestamp
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_meta_tags:
     type: metatag_firehose
     weight: 7
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_page_main_image:
     type: entity_browser_file
     weight: 28
@@ -56,6 +59,7 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+    region: content
   field_paragraphs:
     type: entity_reference_paragraphs
     weight: 27
@@ -66,22 +70,26 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 5
     settings: {  }
     third_party_settings: {  }
+    region: content
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 3
     third_party_settings: {  }
+    region: content
   scheduled_update:
     type: inline_entity_form_complex
     weight: 26
@@ -94,12 +102,14 @@ content:
       match_operator: CONTAINS
       form_mode: default
     third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 4
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: 0
@@ -107,6 +117,10 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
+  translation:
+    weight: 10
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 1
@@ -115,5 +129,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden:
   panelizer: true
