--- a/config/sync/core.entity_form_display.paragraph.vih_option.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_option.default.yml
@@ -20,6 +20,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
   field_vih_option_suboptions:
     weight: 8
     settings:
@@ -27,6 +28,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
   field_vih_option_title:
     weight: 6
     settings:
@@ -34,6 +36,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
 hidden:
   created: true
   status: true
