--- a/config/sync/core.entity_form_display.paragraph.vih_ordered_course_period.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_ordered_course_period.default.yml
@@ -22,6 +22,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
   field_vih_ocp_order_course_slots:
     type: entity_reference_paragraphs
     weight: 7
@@ -33,6 +34,7 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+    region: content
 hidden:
   created: true
   status: true
