--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -6,6 +6,9 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
     - field.field.node.news.field_image
+    - field.field.node.news.field_news_paragraph
+    - field.field.node.news.field_news_tags
+    - field.field.node.news.field_page_main_image
     - node.type.news
   module:
     - panelizer
@@ -29,7 +32,11 @@ content:
     settings:
       trim_length: 100
     third_party_settings: {  }
+    region: content
 hidden:
   field_image: true
+  field_news_paragraph: true
+  field_news_tags: true
+  field_page_main_image: true
   langcode: true
   links: true
