--- a/config/sync/core.entity_view_display.node.vih_short_course_order.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course_order.teaser.yml
@@ -5,6 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.vih_short_course_order.body
+    - field.field.node.vih_short_course_order.field_vih_sco_course
+    - field.field.node.vih_short_course_order.field_vih_sco_ordered_options
+    - field.field.node.vih_short_course_order.field_vih_sco_persons
+    - field.field.node.vih_short_course_order.field_vih_sco_price
+    - field.field.node.vih_short_course_order.field_vih_sco_status
     - node.type.vih_short_course_order
   module:
     - text
@@ -21,12 +26,17 @@ content:
     settings:
       trim_length: 600
     third_party_settings: {  }
+    region: content
   links:
     weight: 100
+    region: content
 hidden:
   field_vih_sco_course: true
   field_vih_sco_first_name: true
   field_vih_sco_last_name: true
   field_vih_sco_ordered_options: true
+  field_vih_sco_persons: true
+  field_vih_sco_price: true
   field_vih_sco_sambo: true
+  field_vih_sco_status: true
   langcode: true
