--- a/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
@@ -23,6 +23,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
   field_heading:
     weight: 0
     label: hidden
@@ -30,6 +31,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_link:
     weight: 2
     label: hidden
@@ -41,6 +43,7 @@ content:
       target: '0'
     third_party_settings: {  }
     type: link
+    region: content
 hidden:
   created: true
   field_background_color: true
