--- a/config/sync/core.entity_view_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.video.default.yml
@@ -24,6 +24,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
   field_heading:
     weight: 0
     label: hidden
@@ -31,12 +32,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_highlighted:
     weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
   field_video:
     weight: 3
     label: hidden
@@ -47,6 +50,7 @@ content:
       autoplay: false
     third_party_settings: {  }
     type: video_embed_field_video
+    region: content
 hidden:
   field_background_color: true
   field_background_image: true
