--- a/config/sync/core.entity_view_display.paragraph.vih_option.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_option.default.yml
@@ -22,6 +22,7 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
+    region: content
   field_vih_option_suboptions:
     weight: 2
     label: above
@@ -29,6 +30,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_vih_option_title:
     weight: 0
     label: above
@@ -36,4 +38,5 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
 hidden: {  }
